--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -5,7 +5,10 @@ on:
     - cron: '0 0 * * *' # Runs daily at midnight UTC
   workflow_dispatch: # Allows manual triggering
   push:
-    branches: [ main ]
+    branches: [ master ]
+
+permissions:
+  contents: write
 
 jobs:
   update-readme:
